--- a/src/main/resources/com/cruiseproject/hello-view.fxml
+++ b/src/main/resources/com/cruiseproject/hello-view.fxml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.cruiseproject.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<HBox prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cruiseproject.HelloController">
+   <children>
+      <Pane prefWidth="130.0">
+         <children>
+            <Pane prefHeight="50.0" prefWidth="130.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="50.0" prefWidth="130.0" text="Cruise Project" textAlignment="CENTER">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Button fx:id="printCruises" layoutX="15.0" layoutY="50.0" mnemonicParsing="false" onAction="#onPrintClick" prefHeight="50.0" prefWidth="100.0" text="Вивести круїзи" textAlignment="CENTER">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></Button>
+            <Button layoutX="15.0" layoutY="110.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Замовити квиток" textAlignment="CENTER" wrapText="true" />
+            <Button layoutX="15.0" layoutY="290.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Знайти квиток" textAlignment="CENTER" wrapText="true" />
+            <Button layoutX="15.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Редагувати квиток" textAlignment="CENTER" wrapText="true" />
+            <Button layoutX="15.0" layoutY="230.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Видалити квиток" textAlignment="CENTER" wrapText="true" />
+         </children>
+      </Pane>
+      <ScrollPane fx:id="listCruises" prefWidth="470.0">
+        <content>
+        </content>
+      </ScrollPane>
+   </children>
+</HBox>
